# myhome

./: .gitignore  pyproject.toml
config/: .env.demo  settings.py  urls.py
manuals/: tests.py  urls.py  views.py
manuals/static/manuals/css/: style.css
manuals/templates/manuals/: dacha.html  generator.html  home.html  index.html  mi-stick.html  pc.html
