[tool.poetry]
name = "myhome"
version = "0.1.0"
description = ""
authors = ["Sergey Petrin"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0.1"
python-decouple = "^3.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
